--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Mamon</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="assets/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -32,11 +33,10 @@
 
     <div class="page">
         <div class="wrap">
-            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum nemo laboriosam tempora obcaecati, itaque
-                qui non, modi aliquam dicta officia velit corporis voluptas a maiores eligendi est sequi aut iusto.
-            </p>
-            <button type="button">Contact Us</button>
+            <h1 class="title-main">We're an independent development agency.</h1>
+            <p class="text-main">We understand the intricacies of web development inside-out. That's why we build
+                rock-solid Mobile and Web applications enriched with user-centered visual experiences.</p>
+            <button type="button" class="button">Contact Us</button>
         </div>
     </div>
     <div class="page page-top">
@@ -44,32 +44,40 @@
             <h2>OUR SERVICES</h2>
             <div class="services">
                 <div class="services-item">
-                    <img src="" alt="">
-                    <div>
+                    <div class="services_img">
+                        <img src="assets/img/services/icon-1.svg" alt="">
+                    </div>
+                    <div class="services_text">
                         <h3>Mobile Development</h3>
                         <p>We develop mobile apps for all contemporary mobile platforms. Mamon team builds native and
                             cross-platform solutions.</p>
                     </div>
                 </div>
                 <div class="services-item">
-                    <img src="" alt="">
-                    <div>
+                    <div class="services_img">
+                        <img src="assets/img/services/icon-2.svg" alt="">
+                    </div>
+                    <div class="services_text">
                         <h3>Web Development</h3>
                         <p>Mamon offers full range of services from various CMS and frameworks based websites to complex
                             ERP/CRM solutions and e-commerce stores.</p>
                     </div>
                 </div>
                 <div class="services-item">
-                    <img src="" alt="">
-                    <div>
+                    <div class="services_img">
+                        <img src="assets/img/services/icon-3.svg" alt="">
+                    </div>
+                    <div class="services_text">
                         <h3>Product Design</h3>
                         <p>We create design given the product audience, goal, business domain, technology and the
                             platform for the solution.</p>
                     </div>
                 </div>
                 <div class="services-item">
-                    <img src="" alt="">
-                    <div>
+                    <div class="services_img">
+                        <img src="assets/img/services/icon-4.svg" alt="">
+                    </div>
+                    <div class="services_text">
                         <h3>Quality Assurance</h3>
                         <p>Our QA team ensures high standard of quality of products delivered.</p>
                     </div>
@@ -77,11 +85,109 @@
             </div>
         </div>
     </div>
-    <div class="page">
+    <div class="page page-top">
         <div class="wrap">
             <h2>OUR CLIENTS</h2>
+            <div class="clients">
+                <div class="clients-item"><img src="assets/img/clients/client-1.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-2.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-3.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-4.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-5.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-6.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-7.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-8.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-9.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-10.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-11.svg" alt=""></div>
+                <div class="clients-item"><img src="assets/img/clients/client-12.svg" alt=""></div>
+            </div>
         </div>
     </div>
+    <div class="page page-top">
+        <div class="wrap">
+            <h2>OUR TEAM</h2>
+            <div class="team">
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-1.png" alt="">
+                    <div>
+                        <h3>Vadim</h3>
+                        <p>Managing Director</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-2.png" alt="">
+                    <div>
+                        <h3>Sergey</h3>
+                        <p>Technology Director</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-3.png" alt="">
+                    <div>
+                        <h3>Andrey</h3>
+                        <p>Front-end Developer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-4.png" alt="">
+                    <div>
+                        <h3>Alex</h3>
+                        <p>Front-end Developer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-5.png" alt="">
+                    <div>
+                        <h3>Agneshka</h3>
+                        <p>Mobile Developer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-6.png" alt="">
+                    <div>
+                        <h3>Dmitry</h3>
+                        <p>Back-end Developer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-7.png" alt="">
+                    <div>
+                        <h3>Artyom</h3>
+                        <p>Back-end Developer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-8.png" alt="">
+                    <div>
+                        <h3>Evgeny</h3>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <img class="team-image" src="assets/img/team/team-9.png" alt="">
+                    <div>
+                        <h3>Tom</h3>
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <div class="wrap box-footer">
+                <a href=""><img src="assets/img/logo.svg" alt=""></a>
+                <ul class="social">
+                    <li><a href="" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="" target="_blank"><i class="fab fa-behance"></i></a></li>
+                    <li><a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="" target="_blank"><i class="fab fa-codepen"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <script defer src="assets/js/all.js"></script>
 </body>
 
 </html>
